--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </p>
           </div>
 
-          <img src="/project/image/d71a1f0106b82a54e324dce1346501dcbea0e315.jpg" alt="" />
+          <img src="/image/d71a1f0106b82a54e324dce1346501dcbea0e315.jpg" alt="" />
 
           <div class="login-form-image-text-bottom">
             <p class="login-form-image-text-title">Seamless Collaboration</p>
@@ -134,6 +134,6 @@
       </div>
     </div>
 
-    <script src="/project/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
